- correction in multipactor - french summary

--- a/first_author_papers.bib
+++ b/first_author_papers.bib
@@ -190,7 +190,7 @@
   pages = {29--39},
   issn = {09203796},
   doi = {10/gdmjr3},
-  abstract = {The ITER Ion Cyclotron Resonance Heating (ICRH) system is designed to couple to the plasma 20 MW of RF power from two antennas in the 40\textendash{}55 MHz frequency range during long pulses of up to 3600 s and under various plasma conditions with Edge Localized Modes. Radio-Frequency (RF) contacts are integrated within the ITER ICRH launcher in order to ensure the RF current continuity and ease the mechanical assembly by allowing the free thermal expansion of the Removable Vacuum Transmission Line coaxial conductors during RF operations or during 250 \textdegree{}C baking phases. A material study has been carried out to determine which materials and associated coatings are relevant for RF contacts application in ITER. In parallel, RF tests have been performed with a new prototype of Multi-Contact\textregistered{} LA-CUT/0,25/0 contacts made of silver-coated CuCrZr louvers. During these tests on a RF vacuum resonator, currents between 1.2 kA and 1.3 kA peak have been reached a few tens of times in steady-state conditions without any visible damage on the louvers. A final 62 MHz pulse ending in a 300 s flat top at 1.9 kA resulted in severe damage to the contact. In addition, a test bed which performs sliding test cycles has been built in order to reproduce the wear of the contact prototype after 30 000 sliding cycles on a 3 mm stroke at 175 \textdegree{}C under vacuum. The silver coating of the louvers is removed after approximately a hundred cycles whilst, to the contrary, damage to the CuCrZr louvers is relatively low.},
+  abstract = {The ITER Ion Cyclotron Resonance Heating (ICRH) system is designed to couple to the plasma 20 MW of RF power from two antennas in the 40\textendash 55 MHz frequency range during long pulses of up to 3600 s and under various plasma conditions with Edge Localized Modes. Radio-Frequency (RF) contacts are integrated within the ITER ICRH launcher in order to ensure the RF current continuity and ease the mechanical assembly by allowing the free thermal expansion of the Removable Vacuum Transmission Line coaxial conductors during RF operations or during 250 \textdegree C baking phases. A material study has been carried out to determine which materials and associated coatings are relevant for RF contacts application in ITER. In parallel, RF tests have been performed with a new prototype of Multi-Contact\textregistered{} LA-CUT/0,25/0 contacts made of silver-coated CuCrZr louvers. During these tests on a RF vacuum resonator, currents between 1.2 kA and 1.3 kA peak have been reached a few tens of times in steady-state conditions without any visible damage on the louvers. A final 62 MHz pulse ending in a 300 s flat top at 1.9 kA resulted in severe damage to the contact. In addition, a test bed which performs sliding test cycles has been built in order to reproduce the wear of the contact prototype after 30 000 sliding cycles on a 3 mm stroke at 175 \textdegree C under vacuum. The silver coating of the louvers is removed after approximately a hundred cycles whilst, to the contrary, damage to the CuCrZr louvers is relatively low.},
   copyright = {All rights reserved},
   file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\ICRH\\Hillairet et al._2018_Radiofrequency and mechanical tests of silver coated CuCrZr contacts for the ITER ion cyclotron antenna.pdf},
   journal = {Fusion Engineering and Design},
