--- a/tex/chap_multipactor.tex
+++ b/tex/chap_multipactor.tex
@@ -58,7 +58,7 @@ Multipactor is a process by which electron population increases from a resonant 
 	\item A synchronism of the electron motion between a single  or two electrodes with the RF electric field.
 \end{itemize}
 
-In high power RF devices under vacuum, this phenomenon is usually not desirable, since it can detune RF systems or ultimately lead to an avalanche effect and the development of a discharge which can damage RF components, even at pressures two order of magnitude below Paschen breakdown limit \sidecite[-1cm]{kishek1998, graves2006}. As it concerns RF system in vacuum environment, it affects satellite payloads\sidecite{rozario1994, anzahormigo2014}, particle accelerators \sidecite[+0.7cm]{elkhaldi2019} and of course fusion experiments. When not detected quickly enough, local plasma can be initiated by multipacting electrons and finally to an arc \sidecite[-0.3cm]{hohn1997}. These arcs can lead to surface erosion \sidecite{goniche2012}, dielectric components metallization \sidecite{wang2015} or water/air leaks due to punctured components such as bellows or vacuum windows \sidecite{neuber1998, neuber2007}. 
+In high power RF devices under vacuum, this phenomenon is usually not desirable, since it can detune RF systems or ultimately lead to an avalanche effect and the development of a discharge which can damage RF components, even at pressures two order of magnitude below Paschen breakdown limit \sidecite[-1cm]{gill1948, kishek1998, graves2006}. As it concerns RF system in vacuum environment, it affects satellite payloads \sidecite{rozario1994, anzahormigo2014}, particle accelerators \sidecite[+0.7cm]{elkhaldi2019} and of course fusion experiments. When not detected quickly enough, local plasma can be initiated by multipacting electrons and finally to an arc \sidecite[-0.3cm]{hohn1997}. These arcs can lead to surface erosion \sidecite{goniche2012}, dielectric components metallization \sidecite[+0.5cm]{wang2015} or water/air leaks due to punctured components such as bellows or vacuum windows \sidecite[+1cm]{neuber1998, neuber2007}. 
 
 %The ICRF and LHRF antennas are  made of copper or silver-coated stainless-steels structures and are located in vacuum environments. The vacuum sealing with pressurized transmission lines is made with the help of ceramics such as alumina, aluminium nitride, beryllium oxide or diamond. 
 
@@ -68,11 +68,11 @@ In some cases however, multipactor-induced discharges can be desired for vacuum 
 
 In addition, magnetic fusion RF heating and current drive systems are subjected to the high magnetic field environment of the experiments in the Tesla range. The presence of magnetic field affects obviously the electron trajectories and thus the multipactor resonances. During the PhD of Nicolas Fil \sidecite{fil2017-1}, he has measured that magnetic field also modify the secondary emission characteristics of a metal, which further impact multipactor processes (cf.Section~\ref{sec:multipactor_magnetic_field}). 
 
-Finally, dielectric are also subject to multipactor, which can be critical when these dielectric are safety components such as vacuum feed-through/windows. Because they are not conductor per definition, dielectrics can accumulate electric charges at their surface. The dynamics of this accumulation can further modify multipactor discharges \sidecite{sorolla2017}. This aspect has been studied during the PhD of Adrien Plaçais \sidecite{placais2020} and develloped in Section~\ref{sec:multipactor_dielectric}.
+Finally, dielectric are also subject to multipactor, which can be critical when these dielectric are safety components such as vacuum feed-through/windows. Because they are not conductor per definition, dielectrics can accumulate electric charges at their surface. The dynamics of this accumulation can further modify multipactor discharges \sidecite{sorolla2017}. This aspect has been studied during the PhD of Adrien Plaçais \sidecite{placais2020} and developed in Section~\ref{sec:multipactor_dielectric}.
 
 
 \subsection{Multipactor in coaxial geometries}\label{sec:multipactor_icrf}
-In coaxial geometries, multipactor-induced breakdown disappear when the power level is above few kilowatts \sidecite[-0.5cm]{woo1968, woo1970}, which is a typical signature of multipactor resonance as expected from theory  \sidecite{udiljak2007, semenov2007, becerra2007}. The later exact power level depends on the RF system such as $Q$-factor and transmission line dimensions and the materials used. Experimental 
+In coaxial geometries, multipactor-induced breakdown disappear when the power level is above few kilowatts \sidecite[-0.5cm]{woo1968, woo1970}, which is a typical signature of multipactor resonance as expected from theory  \sidecite{udiljak2007, semenov2007, becerra2007}. The later exact power level depends on the RF system such as $Q$-factor and transmission line dimensions and the materials used.  
 
 The Figure~\ref{fig:powerthresholdcoax} illustrates the multipactor power threshold versus the line impedance as calculated in a coaxial geometry with a fixed outer diameter at 50~MHz \sidecite{hillairet2017}. Such breakdowns are known to happen when the power builds up during the start-up phase of the generators. For this reason, the RF rise time is generally set as short as possible, in order to exceed this power window as fast as possible (“push-through”) and to be faster than the multipactor rise time \sidecite{graves2006, kishek1997, baity2005, mishra2010}. In practice, the maximum current drawn by the generator or the RF power feedback systems limits this rise time to no more than typically 50~µs/kW, which is generally sufficient to avoid multipactor during power ramp-up. 
 
@@ -94,7 +94,7 @@ The Figure~\ref{fig:powerthresholdcoax} illustrates the multipactor power thresh
 
 %While the exact mechanism leading ultimately to arcs is barely fully certain, 
 
-We have seen that in coaxial lines, multipactor appear above a certain lower electric field threshold, then disappear above an upper threshold. At the contrary, multipactor in rectangular waveguides is triggered only above a certain (large) electric field threshold \sidecite{semenov2007-1}. This has been early identified as a power-limiting mechanism in LHRF grill antennas \sidecite{hwang1981, vaughan1982, dobbing1997, goniche2012-2, goniche2014}. 
+We have seen that in coaxial lines, multipactor appear above a certain lower electric field threshold, then disappear above an upper threshold. At the contrary, multipactor in rectangular waveguides with pure $\TE_{10}$ mode is triggered only above a certain (large) electric field threshold \sidecite{semenov2007-1}. This has been early identified as a power-limiting mechanism in LHRF grill antennas \sidecite{hwang1981, vaughan1982, dobbing1997, goniche2012-2, goniche2014}. 
 
 
 Various strategies have been tested to improve power limits in LHRF grill antennas. Surface treatment to decrease electron secondary emission has been tested in various experiments \sidecite[+0.5cm]{timberlake1982}. However, because of further surface changes appearing during component's life, such as chemical reactions with present species or surface erosion/deposition. Hence, such solution might be inherently less reliable on the long-term. For example, carbon layer had been deposited on JET prototype L0 launcher but was gave up in later prototypes due to its tendency to flake-off \sidecite{dobbing1997, ekedahl1998}.
@@ -121,7 +121,7 @@ A peculiarity of LHRF antenna with respect to satellite payloads is that they us
 	\caption{Typical geometry of a LHRF antenna thin rectangular waveguide close to the plasma.}
 	\label{fig:rectwglhgeometry}
 \end{marginfigure}
-Near the front face of the antenna, the tokamak string magnetic DC magnetic field (few Teslas) is mostly parallel to the RF electric field in the antenna’s waveguides (Figure~\ref{fig:rectwglhgeometry}), with a strong negative gradient (1 to 2 T/m) along the waveguide longitudinal direction. Multipactor simulations showed a ~7\% reduction of the multipactor electric field threshold with respect to no magnetic field case for narrow waveguides (height<15~mm), as illustrated in Figure~\ref{fig:rectwglhgeometry}. Moreover, strong resonance correlated with the increase of the multipactor order is numerically observed when the total magnetic field (in norm) is such that the electron cyclotron frequency equals the wave frequency. In this case, the multipactor threshold is decreased more strongly for larger waveguides (-60\%) than for narrower ones (-20\%). Such case can lead to ease the breakdown occurrence, a situation which has been experimentally observed on smaller machines for which this range of magnetic field was met at the location of the grill antennas \sidecite[+3cm]{knowlton1982}. Such limitation is generally not observed experimentally on larger machine, due to the fact that the resonance layer occur in much wider waveguides. 
+Near the front face of the antenna, the tokamak strong magnetic DC magnetic field (few Teslas) is mostly parallel to the RF electric field in the antenna’s waveguides (Figure~\ref{fig:rectwglhgeometry}), with a strong negative gradient (1 to 2 T/m) along the waveguide longitudinal direction. Multipactor simulations showed a ~7\% reduction of the multipactor electric field threshold with respect to no magnetic field case for narrow waveguides (height<15~mm), as illustrated in Figure~\ref{fig:rectwglhgeometry}. Moreover, strong resonance correlated with the increase of the multipactor order is numerically observed when the total magnetic field (in norm) is such that the electron cyclotron frequency equals the wave frequency. In this case, the multipactor threshold is decreased more strongly for larger waveguides (-60\%) than for narrower ones (-20\%). Such case can lead to ease the breakdown occurrence, a situation which has been experimentally observed on smaller machines for which this range of magnetic field was met at the location of the grill antennas \sidecite[+3cm]{knowlton1982}. Such limitation is generally not observed experimentally on larger machine, due to the fact that the resonance layer occur in much wider waveguides. 
 
 When a magnetic field is directed along the waveguide’s large side direction, i.e. in the poloidal direction ($B_y$), the calculated multipactor power threshold can increase or decrease with respect to the threshold without DC magnetic field. However, in the typical range of radial magnitude observed in tokamak ($B_x$ ~0.1 to 0.3~T, no multipactor occurs. The addition of this $B_y$ field to a $B_0$ component has no effect on the threshold, unless $B_y ~ B_0$ where it is enhanced. 
 
@@ -156,7 +156,7 @@ TEEY is the total of the SEY and the BSEY, i.e. $\sigma=\eta+\delta$. These valu
 	\label{fig:teeycuexample}
 \end{figure}
 
-It is known from long that the triggering of multipactor depends on the first cross-over energy  $E_{c1}$ and the maximum value of the TEEY curve ($\sigma_{\max}$) \sidecite{kishek1998}. However, as by shown in \citeauthyear{fil2016}, the magnitude of the calculated threshold also heavily depends on the shape of this curve, notably between $E_{c1}$ and $\sigma_{\max}$. Using secondary emission data for silver collected in the literature and experimental multipactor results, Nicolas Fils has shown during his PhD that in order for multipactor simulations to get results close experimental ones, the TEEY model curves need to be accurate in particular between $E_{c1}$ and $E_{\max}$. Hence, for multipactor simulations to be predictive, the TEEY properties of a RF device materials should be well known and representative of the operating conditions such as temperature and surface state. As the later evolves in time due to a combination of multiple factors such as impurity contamination, RF conditioning, breakdowns, prediction of the absolute multipactor threshold is possible but challenging for tokamak RF antennas.
+It is known from long that the triggering of multipactor depends mainly on the first cross-over energy  $E_{c1}$ and eventually on the maximum value of the TEEY curve ($\sigma_{\max}$) \sidecite{kishek1998}. However, as by shown in \citeauthyear{fil2016}, the magnitude of the calculated threshold also heavily depends on the shape of this curve, notably between $E_{c1}$ and $\sigma_{\max}$. Using secondary emission data for silver collected in the literature and experimental multipactor results, Nicolas Fils has shown during his PhD that in order for multipactor simulations to get results close experimental ones, the TEEY model curves need to be accurate in particular between $E_{c1}$ and $E_{\max}$. Hence, for multipactor simulations to be predictive, the TEEY properties of a RF device materials should be well known and representative of the operating conditions such as temperature and surface state. As the later evolves in time due to a combination of multiple factors such as impurity contamination, RF conditioning, breakdowns, prediction of the absolute multipactor threshold is possible but challenging for tokamak RF antennas.
 
 % ###########################################################
 % ###########################################################
@@ -226,7 +226,7 @@ As discussed in previous Sections, dielectric material are found in RF heating s
 	\label{fig:dielectricelectricalchargeeffect}
 \end{marginfigure}
 
-In contrary to metals, dielectrics can trap a net electrical charge, which influences the electrons trajectory and thus the multipactor resonance conditions. Moreover, dielectrics electron emission properties vary with their charge. It means that multipactor calculation has to take into account the dynamic aspect of the electron emission properties of dielectric components \sidecite[+2cm]{sorolla2017}. For this reason, a new simulation code called POTOMAC (Physical simulatiOn TOol for Multipactor in Advanced Configurations) has been developed to model this kind of systems in the frame of the PhD of Adrien Plaçais \sidecite[+1cm]{placais2018}. POTOMAC is Particle-In-Cell (PIC) code which is able to take into account the dynamic evolution of the electron emission. 
+In contrary to metals, dielectrics can trap a net electrical charge, which influences the electrons trajectory and thus the multipactor resonance conditions. Moreover, dielectrics electron emission properties vary with their charge. It means that multipactor calculation has to take into account the dynamic aspect of the electron emission properties of dielectric components \sidecite[+2cm]{sorolla2017}. For this reason, a new simulation code called POTOMAC (Physical simulatiOn TOol for Multipactor in Advanced Configurations) has been developed to model this kind of systems in the frame of the PhD of Adrien Plaçais \sidecite[+1cm]{placais2018}. POTOMAC is a  Particle-In-Cell (PIC) code which is able to take into account the dynamic evolution of the electron emission. 
 
 An important work has been made in POTOMAC to describe material electron emission properties, as function of the incident electron energy and angle, the dielectric charge and keeping tracks of the underlying physical mechanisms and reproducing correctly experimental results \sidecite{placais2018, placais2020-1}. As a general trend, the increase of the dielectric surface charge (negative or positive) increases the multipactor threshold. These preliminary results must be confirmed by further modelling work as well as by experimental results expected from parallel test campaigns.
 
