--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -1,9 +1,25 @@
-\chapter*{Summary}
-Summary and keywords
-%\selectlanguage{french}
+\chapter*{Résumé}
+\selectlanguage{french}
 
-%\vspace{0.5cm}
-%Mots clés: géométrie algorithmique, complexe planaire et rectangulaire, géodésique, courbure globale non-positive
+La fusion est le processus nucléaire qui fait briller le soleil comme toutes les étoiles de l'univers et que l'on cherche à maîtriser sur terre. À l’opposé de la fission nucléaire, la fusion consiste à créer un noyau atomique plus lourd à partir de plusieurs noyaux légers. Sur Terre, la maîtrise de la fusion présenterait beaucoup d’avantages en comparaison de la fission nucléaire, en termes de densité énergétique, de sécurité, de ressources en combustibles et sans production intrinsèque de gaz à effet de serre. 
 
-%\selectlanguage{english}
+Toutefois, reproduire les conditions de température favorables à la fusion, soit entre 100 et 200 millions de degrés Celsius (10-20 keV) n’est pas trivial. À ces températures, la matière se présente sous forme de plasma : les électrons composant les noyaux atomiques ont été arrachés, générant ainsi un mélange d’ions et d’électrons qui ne sont plus liés entre eux. Ce plasma peut être confiné et contrôlé en lui imposant un puissant champ magnétique : c’est ce qu’on réalise dans des machines de recherche appelées tokamaks, par exemple le tokamak WEST (anciennement Tore Supra) situé sur le centre CEA de Cadarache dans les Bouches-du-Rhône. Bien que les performances obtenues sur les différentes installations dans le monde aient continuellement progressées depuis plus de 50 ans, le rendement énergétique défini par le rapport entre l'énergie libérée par la fusion et l'énergie injectée dans le plasma pour obtenir les conditions de fusion reste encore inférieur à 1. Le projet international Iter, en cours de construction à Cadarache, doit démontrer qu'il est possible d'obtenir un rapport de 5 à 10.
+
+Afin d'obtenir des températures de plusieurs dizaines de millions de degrés, des systèmes radiofréquences sont utilisés couramment sur différentes installations expérimentales dans le monde. Ces systèmes vont générer puis transmettre jusqu'au plasma des ondes électromagnétiques de plusieurs mégawatts. Selon leurs fréquences (de plusieurs MHz à une centaine de GHz), elles vont transférer leur énergie de préférence aux ions ou aux électrons du plasma, voire générer du courant électrique dans le plasma, afin d'augmenter la durée de maintien du plasma. Dans un tokamak, ces ondes sont injectées dans le plasma par des antennes situées à proximité de ce dernier. Ces antennes doivent être conçues pour opérer sous vide à des puissances de plusieurs mégawatts, sur des temps longs, tout en supportant les divers flux thermiques et de particules en provenance du plasma. Ces conditions sévères, voire hostiles, sont exclusives à ces machines de recherche et par conséquent la littérature scientifique sur ce sujet est peu abondante.
+
+Ce manuscrit décrit une partie de mon travail réalisé au CEA/IRFM depuis 2008 en tant qu'ingénieur radio-fréquence et physicien des plasmas sur la conception de ces antennes ou de leurs éléments ainsi que de l'analyse de leurs intéractions avec le plasma. 
+
+Les deux premiers chapitres sont des introductions et des rappels théoriques nécessaires à la lecture des chapitres suivants. Le chapitre 1 est une introduction à la fusion nucléaire contrôlée et aux systèmes de chauffage et de génération de courant pour des plasmas de tokamaks. Les principaux éléments composants les systèmes radio-fréquences utilisés pour le chauffage et la génération de courant dans les plasmas de tokamak sont également décrits dans ce chapitre. Le chapitre 2 rappelle les éléments théoriques permettant la description de la propagation des ondes électromagnétiques dans les lignes de transmission jusqu'au plasma faisant face aux antennes.
+
+Le chapitre 3 décrit mes travaux concernant le couplage des ondes radio-fréquence excitées par les antennes au plasma de tokamaks. Ce chapitre débute par une rapide introduction théorique aux ondes dans les plasmas, en particulier aux domaines de fréquences dits Cyclotronique Ioniques et Hybride Basse qui concerne ce manuscrit. Le couplage de ces ondes au plasma est analysé de deux façons pour les ondes Hybrides Basses : i) grâce à une formulation semi-analytique implémentée dans le code ALOHA ou ii) en utilisant des codes de calcul commerciaux. Les résultats numériques obtenus sont comparés avec  des expériences réalisées sur le tokamak Tore Supra.
+
+Les chapitre 4 et 5 portent sur plusieurs exemples de travaux relatifs à la conception d'antennes radio-fréquences ou de leurs éléments. Le chapitre 4 est dédié à la gamme de fréquence Cyclotronique Ionique (dizaines de MHz). La première partie détaille les travaux réalisés à partir de 2013 concernant la conception des antennes Cyclotroniques Ioniques pour le tokamak WEST. La seconde partie de ce chapitre est consacrée aux travaux réalisés et encadrés dans le cadre de la R\&D menée sur les contacts électriques glissants pour le système Cyclotronique Ionique d'ITER. Le chapitre 5 est quant à lui consacré aux activités de conceptions et de tests de composants radiofréquences pour le système à la fréquence Hybride Basse d'ITER, réalisés entre 2010 et 2014.
+
+Le chapitre 6 rapporte les travaux d'étudiants encadrés sur la thématique des arcs et notamment du phénomène multipactor. Ces travaux ont été menés en collaboration avec le CNES et l'ONERA.
+
+Enfin, le chapitre 7 porte sur mes activités d'enseignement et de vulgarisation réalisés au CEA/IRFM, pour des tranches d'âges diverses allant du collège jusqu'aux étudiants de Master 2. Ce chapitre se termine par la description de mon activité autour du logiciel libre, en particulier le développement du package Python scikit-rf.
+
+
+
+\selectlanguage{english}
 
