--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -3,7 +3,7 @@
 \chapter*{Summary}
 %\labch{intro}
 
-Magnetic confinement fusion researches is the most advanced technique to master nuclear fusion for energy production. One of the main requirements for achieving fusion is to heat the plasma particles to temperatures exceeding 100-200 million of degrees (10-20 keV). Electromagnetic waves in mega-watt range of power, from tens of MHz to hundreds of GHz, are launched by antennas located near the plasma periphery in order to increase the plasma temperature and extend its duration. However, designing and using multi-megawatts RF systems is not trivial and leads to many issues, which for some of them  are relatively little addressed in the literature. 
+Magnetic confinement is currently the most advanced technique to master nuclear fusion for energy production. One of the main requirements for achieving fusion is to heat the plasma particles to temperatures exceeding 100-200 million of degrees (10-20 keV). Electromagnetic waves in mega-watt range of power, from tens of MHz to hundreds of GHz, are launched by antennas located near the plasma periphery in order to increase the plasma temperature and extend its duration. However, designing and using multi-megawatts RF systems is not trivial and leads to many issues, which for some of them  are relatively little addressed in the literature. 
 
 This manuscript describes part of my work performed at CEA/IRFM since 2008 as RF research scientist. The Chapter 1 is an introduction to the controlled nuclear fusion and the need for Heating and Current Drive systems in Tokamaks. The main elements of the RF systems used in current experimental devices are identified in this chapter. 
 
@@ -17,4 +17,4 @@ The Chapter 6 introduces the work mostly performed by PhD student concerning RF 
 
 Finally, the Chapter 7 describes parallel teaching and outreaching activities performed at CEA/IRFM, on the topic of the "Fusion Education". It concerns young students. This chapter also addresses my work on open-source software developments, in particular on the Python package scikit-rf. 
 
-This manuscript does not cover some of my work at CEA/IRFM performed since 2008, such as on RF plasma cleaning in the frame of the ITER Wide-Angle Visible (WAVS) diagnostic or my work as WEST Engineer-in-Charge (the \href{https://github.com/IRFM/PPPAT/}{PPPAT software}), neither a rapid excursion in the Electron Cyclotron world (\sidecite{farthouat2010}).
+This manuscript does not cover some of my work at CEA/IRFM performed since 2008, such as on RF plasma cleaning in the frame of the ITER Wide-Angle Visible (WAVS) diagnostic or my work as WEST Engineer-in-Charge (the \href{https://github.com/IRFM/PPPAT/}{PPPAT software}), neither a rapid excursion in the Electron Cyclotron world in (\citeauthyear{farthouat2010}).
