--- a/tex/chap4.tex
+++ b/tex/chap4.tex
@@ -74,7 +74,7 @@ Among these hands-on, some are devoted to RF component measurements and analysis
 	\label{fig:handsonlh1}
 \end{marginfigure}
 
-Two hands-on have been proposed to the students on two RF components constituting the real WEST LH launchers: a mode converter (in red in Figure~\ref{fig:handsonlh1}) and a "multijunction" (in blue in Figure~\ref{fig:handsonlh1}). These RF components have multiple functions detailed in Section~\ref{{sec:LHCD_antennas_general}}, but the main one is to split the RF power coming from the klystron to numerous waveguides facing the plasma. 
+Two hands-on have been proposed to the students on two RF components constituting the real WEST LH launchers: a mode converter (in red in Figure~\ref{fig:handsonlh1}) and a "multijunction" (in blue in Figure~\ref{fig:handsonlh1}). These RF components have multiple functions, but the main one is to split the RF power coming from the klystron to numerous waveguides facing the plasma. 
 
 \subsubsection{$\TE_{10}$-$\TE_{30}$ mode converter}
 
