--- a/tex/chap_high_power_lhrf.tex
+++ b/tex/chap_high_power_lhrf.tex
@@ -9,7 +9,7 @@
 \epigraph{Les sciences ne sont pas comme Minerve, qui sortit tout armée du cerveau de Jupiter ; elles sont filles du temps, et se forment insensiblement, d’abord par la collection des méthodes indiquées par l’expérience, et plus tard par la découverte des principes qui se déduisent de la combinaison de ces méthodes. }{Brillat-Savarin, Physiologie du goût.}
 
 
-This chapter reviews the work done by the author on high power RF devices at CEA/IRFM for the Lower Hybrid Range of frequencies. After a general introduction on LHRF systems in Section~\ref{sec:LHCD_antennas_general}, the Section~\ref{eq:LHRF_work} review the ITER LHCD antenna (Section~\ref{sec:ITER_LHCD_antenna}). Because it is needed to bring the RF power up to the antenna, high power transmission line elements are also necessary. Work performed on the design and tests of few kinds of high power devices such as a mode converter, vacuum windows are detailed in Chapter. 
+This chapter reviews the work done by the author on high power RF devices at CEA/IRFM for the Lower Hybrid Range of frequencies. After a general introduction on LHRF systems in Section~\ref{sec:LHCD_antennas_general}, the Section~\ref{eq:LHRF_work} review the ITER LHCD antenna (Section~\ref{sec:ITER_LHCD_antenna}). Because it is needed to bring the RF power up to the antenna, high power transmission line elements are also necessary. Work performed on the design and tests of few kinds of high power devices such as a mode converter, vacuum windows are detailed in this Chapter. 
 
 
 % #####################################################
@@ -31,7 +31,7 @@ As the plasma cross-section dimensions of toroidal devices became sufficiently l
 	\label{fig:compassgrillout}
 \end{marginfigure}
 
-However, in order for the wave to access from outside the plasma to inside the plasma, the wave has to be "slowed down" along the static toroidal magnetic field. This means that the parallel phase velocity of the wave $v_{\parallel}$ has to be reduced with respect to the speed of light $c_0$, in order to being able to penetrate trough the plasma. It is said that the waves must satisfy an \emph{accessibility condition} (Eq.(\ref{eq:accessibilit_condition_LH})), in practice $n_\parallel > 1$ \sidecite[-5cm]{golant1972, stix1992}\footnote{The accessibility condition is sometime referred as the Golant's accessibility criterion, for e.g. in\citeauthyear{puri1974}.}. Equivalently, this condition requires for the wave to have a sufficiently large refractive \emph{parallel index} $n_{\parallel} = c_0/v_{\parallel} = k_{\parallel}/k_0$, parallel to the magnetic field. The use of a phased array as a way to slow down the waves and thus to launch LH waves was first suggested by Lallia and investigated by \citeauthyear{bernabei1975}. Lallia suggested that a set of properly phased waveguides, called "grill"\footnote{The similarity to the cooking utensil leads to nickname these launchers "grill".}, would efficiently slow down the wave parallel to toroidal magnetic field. The short sides of the waveguides are mounted parallel to the toroidal magnetic field, to launch effectively a slow wave mode into the plasma. 
+However, in order for the wave to access from outside the plasma to inside the plasma, the wave has to be "slowed down" along the static toroidal magnetic field. This means that the parallel phase velocity of the wave $v_{\parallel}$ has to be reduced with respect to the speed of light $c_0$, in order to being able to penetrate trough the plasma. It is said that the waves must satisfy an \emph{accessibility condition} (Eq.(\ref{eq:accessibilit_condition_LH}))\sidecite[-5cm]{golant1972, stix1992}\footnote{The accessibility condition is sometime referred as the Golant's accessibility criterion, for e.g. in \citeauthyear{puri1974}.}. Equivalently, this condition requires for the wave to have a sufficiently large refractive \emph{parallel index} $n_{\parallel} = c_0/v_{\parallel} = k_{\parallel}/k_0>1$, parallel to the magnetic field. The use of a phased array as a way to slow down the waves and thus to launch LH waves was first suggested by Lallia and investigated by \citeauthyear{bernabei1975}. Lallia suggested that a set of properly phased waveguides, called "grill"\footnote{The similarity to the cooking utensil leads to nickname these launchers "grill".}, would efficiently slow down the wave parallel to toroidal magnetic field. The short sides of the waveguides are mounted parallel to the toroidal magnetic field, to launch effectively a slow wave mode into the plasma. 
 
 \begin{figure}
 	\centering
@@ -41,11 +41,11 @@ However, in order for the wave to access from outside the plasma to inside the p
 \end{figure}
 
 
-Brambilla developed the theory of the Slow-wave coupling of a simplified grill structure to a large toroidal plasma \sidecite{brambilla1979} and applied (and still) to many different geometries, from single waveguide to hundred of waveguides array. This coupling theory has been generalized later to the Fast-wave coupling \sidecite{theilhaber1980} and to 3D rectangular waveguides in \sidecite[+1cm]{Bers1981, bers1983}. 
+Brambilla developed the theory of the Slow-wave coupling of a simplified grill structure to a large toroidal plasma \sidecite{brambilla1979} and applied it to various different geometries, from single waveguide to hundred of waveguides array. This coupling theory has been generalized later to the Fast-wave coupling \sidecite{theilhaber1980} and to 3D rectangular waveguides in \sidecite[+1cm]{Bers1981, bers1983}. 
 
-Qimilarly to ICRF antennas, the wave excited by LHRF antenna is evanescent if the electron density is below a cut-off density $n_c$ (Eq.(\ref{eq:lh_cutoff_density})). However, if such a low density layer is thin enough, the wave can tunnel through it. Thus, the LH launcher must be close enough of the plasma in order to efficiently couple high power. 
+Similarly to ICRF antennas, the wave excited by LHRF antenna is evanescent if the electron density is below a cut-off density $n_c$, cf. Eq.(\ref{eq:lh_cutoff_density}). However, if such a low density layer is thin enough, the wave can tunnel through it. Thus, the LH launcher must be close enough of the plasma in order to efficiently couple high power. 
 
-In these conditions, the thermal and mechanical stresses are essential parameters to design an LH launcher. They and constitute a challenge to deliver such for these systems in for fusion reactors. As for IC antennas, LHCD launchers distributed in the vacuum vessel is being proposed for DEMO, mitigating substantially these issues \sidecite{bosia2014, kim2019}. 
+In these conditions, the thermal and mechanical stresses are essential parameters to design an LH launcher. They constitute a challenge to deliver such systems for fusion reactors. As for IC antennas, LHCD launchers distributed in the vacuum vessel is being proposed for DEMO, mitigating substantially these issues \sidecite{bosia2014, kim2019}. 
 
 % #####################################################
 % #####################################################
@@ -239,7 +239,7 @@ located inside the frame and connected to a poloidal 3~dB splitter which feeds t
 
 An illustration of the multijunction design, with four active waveguides per toroidal line is shown in Figure~\ref{fig:Illustration_4awg_design}. The passive waveguides, not illustrated in the Figure, are inserted between each active waveguides. In this design, the active waveguides (of width $b_{a}=9.25$~mm) are wider then passive waveguides ($b_{p}=7.25$~mm). The waveguides height ($a=58$~mm) avoids the higher mode $\TE_{20}$ to propagate and is close to the WR229 standard ($58.17\times29.08$~mm). 
 
-The structure has been optimized in order to reach the following goals: i) minimize the reflected power, ii) insure a $270\si{\degree}$ phase shift between adjacent active waveguides. The estimated return loss of the optimized structure is $-34$~dB while the phase difference between adjacent output waveguides is $270\si{\degree} \pm 0.7\si{\degree}$. The transmitted power $\left|S_{n1}\right|^{2}$ (with $n=\{2,3,4,5\})$ is $1/4\pm7\times10^{-3}$ which means that the input power is well divided into the 4 output of the multijunction. The maximum electric field on matched ports is 346~kV/m for a power input of 250~kW, the propagation loss $1-\sum_{n} \left| S_{n1} \right|^{2}$ for copper walls is 1.2\% and the total length of the multijunction illustrated in Figure\ref{fig:Illustration_4awg_design} is $1.170$~m. 
+The structure has been optimized in order to reach the following goals: i) minimize the reflected power, ii) insure a $270\si{\degree}$ phase shift between adjacent active waveguides. The estimated return loss of the optimized structure is $-34$~dB while the phase difference between adjacent output waveguides is $270\si{\degree} \pm 0.7\si{\degree}$. The transmitted power $\left|S_{n1}\right|^{2}$ (with $n=\{2,3,4,5\})$ is $1/4\pm7\times10^{-3}$ which means that the input power is well divided into the 4 output of the multijunction. The maximum electric field on matched ports is 346~kV/m for a power input of 250~kW, the propagation loss $1-\sum_{n} \left| S_{n1} \right|^{2}$ for copper walls is 1.2\% and the total length of the multijunction illustrated in Figure~\ref{fig:Illustration_4awg_design} is $1.170$~m. 
 
 \begin{figure}[h]
 	\centering{}\includegraphics[width=0.9\textwidth]{figures/chap3/ITER_antenna/LH4ITER_MJ_4awg}
