--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -13,8 +13,8 @@ The Chapter 3 describes my work on the coupling of RF waves from antennas to tok
 
 The Chapters 4 and 5 described my work for the design and tests of high power devices for RF heating and current drive in tokamaks. Chapter 4 is dedicated to Ion Cyclotron Range of Frequency (ICRF). It concerns my work on the WEST ICRF antennas design and modelling which has started in 2013. Another important topic of this chapter concerns the R\&D performed on the ITER ICRF system, specifically on RF contacts. The Chapter 5 addresses the design and tests of RF devices for the LHRF from 2010 to 2014, which concerns in particular components for the then foreseen ITER LHCD system.
 
-The Chapter 6 introduces the work mostly performed by PhD student concerning RF breakdowns and in particular the multipactor effect. This work has been made in collaboration with CNES and ONERA since 2014.
+The Chapter 6 introduces the work mostly performed by PhD students concerning RF breakdowns and in particular the multipactor effect. This work has been made in collaboration with CNES and ONERA since 2014.
 
-Finally, the Chapter 7 describes parallel teaching and outreaching activities performed at CEA/IRFM, on the topic of the "Fusion Education". It concerns young students. This chapter also addresses my work on open-source software developments, in particular on the Python package scikit-rf. 
+Finally, the Chapter 7 describes parallel teaching and outreaching activities performed at CEA/IRFM, on the topic of the "Fusion Education". This chapter also addresses my work on open-source software developments, in particular on the Python package scikit-rf. 
 
 This manuscript does not cover some of my work at CEA/IRFM performed since 2008, such as on RF plasma cleaning in the frame of the ITER Wide-Angle Visible (WAVS) diagnostic or my work as WEST Engineer-in-Charge (the \href{https://github.com/IRFM/PPPAT/}{PPPAT software}), neither a rapid excursion in the Electron Cyclotron world in (\citeauthyear{farthouat2010}).
