--- a/tex/chap_RF_fundamentals.tex
+++ b/tex/chap_RF_fundamentals.tex
@@ -19,7 +19,7 @@ We will review the fundamentals of transmission line theory (Section~\ref{sec:tr
 
 Once RF waves have been generated, it must be transmitted to the antennas, using suitable transmission line depending on the RF frequency and power level. The main results and properties of uniform transmission lines are reviewed in this section. The results given here are well-known and can be found in numerous textbooks such as \sidecite{Harrington2001, marcuvitz1951, Thourel1988, Collin1990, gonzalez1997, pozar2012, Orfanidis, steer2019-3} to give a personal selection.
 
-A transmission line is defined as \textit{uniform} if its dimensions and electrical properties are identical for all planes transverse to the direction of propagation. The results listed in this section are used in the following sections of this chapter for the design and the analysis of high power RF components.
+A transmission line is defined as \textit{uniform} if its dimensions and electrical properties are identical for all planes transverse to the direction of propagation. The results listed in this section are used in the following sections of this manuscript for the design and the analysis of high power RF components.
 
 % #####################################################
 \subsection{Voltage and Current}
@@ -30,7 +30,7 @@ A transmission line is defined as \textit{uniform} if its dimensions and electri
 	\label{fig:transmissionlinepropertiesvi}
 \end{figure}
 
-Let a lossy transmission line of propagation constant $\gamma=\alpha+j\beta$ (in $\si{m^{-1}}$) and characteristic impedance $Z_0$ (in $\si{\Omega}$), terminated by an arbitrary load $Z_L$. The line length is The source is parametrized by the distance $z$, where the source is located at distance $z=-d$ from the load ($z=0$) as illustrated in Figure~\ref{fig:transmissionlinepropertiesvi}. Attenuation constant $\alpha$ has the units of Nepers per meter $\si{Np/m}$ and the phase constant $\beta$ has the units radians per meter $\si{rad/m}$\footnote{$1\,\si{Np/m}$ equals to $8.6859 \, \si{dB/m}$. To convert from \si{dB} to \si{Np} multiply by $0.1151$. Thus $\alpha = x \, \si{dB/m} = x \times 0.1151 \, \si{Np/m}$.}. Let $V=V(z)$ and $I=I(z)$ the total voltage and current on the line, which can be written as a sum of a forward and reflected waves:
+Let a lossy transmission line of propagation constant $\gamma=\alpha+j\beta$ (in [$\si{m^{-1}}$]) and characteristic impedance $Z_0$ (in [$\si{\Omega}$]), terminated by an arbitrary load $Z_L$ (in [$\si{\Omega}$]). The line length is parametrized by the distance $z$, where the source is located at distance $z=-d$ from the load (located at $z=0$) as illustrated in Figure~\ref{fig:transmissionlinepropertiesvi}. Attenuation constant $\alpha$ has the units of Nepers per meter [$\si{Np/m}$] and the phase constant $\beta$ has the units radians per meter [$\si{rad/m}$]\footnote{$1\,\si{Np/m}$ equals to $8.6859 \, \si{dB/m}$. To convert from \si{dB} to \si{Np} multiply by $0.1151$. Thus $\alpha = x \, \si{dB/m} = x \times 0.1151 \, \si{Np/m}$.}. Let $V=V(z)$ and $I=I(z)$ the total voltage and current on the line, which can be written as a sum of a forward and reflected waves:
 \marginnote{$\Vfwd$ and $\Vrefl$ ($\Ifwd$ and $\Irefl$) are defined here as peak voltages (currents). For sine wave, RMS voltage is $V_{\mathrm{RMS}}=V_{\mathrm{peak}}/\sqrt{2}$.}
 \begin{subequations}
 \begin{align}
@@ -40,7 +40,7 @@ Let a lossy transmission line of propagation constant $\gamma=\alpha+j\beta$ (in
 	\label{eq:voltage_current_lossy_line}
 \end{subequations}
 where the $e^{-\gamma z}$ term represents wave propagation in the $+z$ direction (and $e^{+\gamma z}$ in the $-z$ direction). The terms $\Vfwd$, $\Vrefl$ ($\Ifwd$, $\Irefl$) represent the forward and reflected voltage (current) waves at $z=0$.  
-The \textit{characteristic impedance} $Z_0$ associated to a uniform transmission line (or any continuous media supporting the propagation of electromagnetic waves) is defined as the ratio of the forward voltage and current when the transmission line is infinite, i.e.  $Z_0=\Vfwd/\Ifwd(=-\Vrefl/\Irefl)$. It characterizes the property of the line to oppose a change in voltage for a change of current or vice-versa. When $Z_L=Z_0$, the load is said to be \textit{matched} to the line and there is no reflected wave $\Vrefl=0$.
+The \textit{characteristic impedance} $Z_0$ associated to a uniform transmission line (or any continuous media supporting the propagation of electromagnetic waves) is defined as the ratio of the forward voltage and current when the transmission line is infinite, i.e.  $Z_0=\Vfwd/\Ifwd(=-\Vrefl/\Irefl)$. It characterizes the property of the line to oppose a change in voltage for a change of current or vice-versa. When $Z_L=Z_0$, the load is said to be \textit{matched} to the line and there is no reflected wave ($\Vrefl=0$).
 
 \begin{marginfigure}[-2cm]
 	\includegraphics[width=1\linewidth]{figures/chap3/transmission_line_transfer}
@@ -107,7 +107,7 @@ In fusion application, the load is unfortunately rarely matched to the transmiss
 	\label{eq:voltage_current_lossy_line_gamma}
 \end{subequations} 
 
-The \textit{standing wave ratio} or SWR is defined as:
+The \textit{standing wave ratio} (SWR) is defined as:
 \marginnote[*-1]{With the inverse expression
 	$$ 	|\Gamma| = \frac{\SWR - 1}{\SWR + 1} $$}
 \begin{equation}
@@ -153,11 +153,11 @@ Z(z=-\ell)
 	=& Z_0 \frac{1 + \Gamma(-\ell) }{1 - \Gamma(-\ell) }
 	\end{align}
 \end{subequations}
-As noted aboved with respect to Figure~\ref{fig:coaxial_line_fields}, we have in particular $Z_{\mathrm{in}}=Z(z=-d)$ and $Z(z=0)=Z_L$.
+As noted above with respect to Figure~\ref{fig:transmission_line_transfer}, we have in particular $Z_{\mathrm{in}}=Z(z=-d)$ and $Z(z=0)=Z_L$.
 
 % #####################################################
 \subsection{Power and losses}\label{sec:power_and_losses}
-The time average power flowing along the transmission line is the difference between the forward and the reflected powers:
+The time average power flowing along the transmission line is defined as:
 \begin{equation}
 P (z) = \frac{1}{2} \Re\left[V(z) I^*(z)\right] 
 \label{eq:power_time_average_general}
@@ -221,14 +221,14 @@ where $|V_{\mathrm{max}}| = \max_z |V(z)| = |\Vfwd| + |\Vrefl|$ and similarly fo
 	\label{eq:max_current_function_forward_power_gammaL}
 \end{subequations}
 
-The power lost in the transmission line is converted into heat in the metallic conductors and dielectric elements due to Ohmic and dielectric losses respectively. For high power applications such as RF heating and current drive, this heat must be evacuated to sustain CW operation. Before expressing loss formulas for the main two kinds of transmission lines used for ICRH and LHCD, we recall here for future references that the power loss in a good conductor can be calculated as:
+The power lost in the transmission line is converted into heat in the metallic conductors and dielectric elements due to Ohmic and dielectric losses respectively. This heat must be evacuated to sustain CW operation. Before expressing loss formulas for the main two kinds of transmission lines used for ICRH and LHCD, we recall here for future references that the power loss in a good conductor can be calculated as:
 \begin{equation}
 P_\ell = \frac{R_s}{2} \int_S |J_s|^2 \diff S = \frac{R_s}{2} \int_S |H_t|^2 \diff S 
 \label{eq:power_loss_conductor}
 \end{equation}
-where the integral is performed over the conductor surface(s), $J_s$ and $H_t$ the surface current and the tengential magnetic field respectively\cite[§1.7]{pozar2012}. 
+where the integral is performed over the conductor surface(s), $J_s$ and $H_t$ are the surface current and the tangential magnetic field respectively\cite[§1.7]{pozar2012}. 
 
-definition of the \textit{skin depth} $\delta_s$ (in $[\si{m}]$) as:
+The \textit{skin depth} $\delta_s$ (in $[\si{m}]$) is defined as:
 \begin{equation}
 \delta_s 
 	=
@@ -282,7 +282,7 @@ If the generator is not equipped with internal matching network, it is a good en
 	\label{fig:transmission_matching_system}
 \end{figure}
 
-Matching is frequency dependant since it deals with the adjustment of reactances. The perfect impedance match can occur only at one frequency but high power sources are usually very narrowband. If the source frequency can be tuned, which is the case of ICRH generators, matching networks are designed to be tunable. Such system use stub (shunt coaxial section that ends in a movable short) and line stretchers (transmission line section that can vary its electrical distance). In theory, a one-quarter-wavelength stub in conjunction with a half-wavelength stretcher can match any impedance to the generator\sidecite{england1989}. However, the actuators of these systems rely on motors (capacitors) or hydraulic systems (tuning stub, line stretchers), so their response time is of the order to 100 milliseconds or higher, which is much slower than most uncontrolled plasma variations. For this reason, fusion RF antenna are designed to be intrinsically relatively load-tolerant, using specific feeding line or antenna design. 
+Matching is frequency dependant since it deals with the adjustment of reactances. The perfect impedance match can occur only at one frequency but high power sources are usually very narrowband. If the source frequency can be tuned, which is the case of ICRH generators, matching networks are designed to be tunable. Such system use stub (shunt coaxial section that ends in a movable short) and line stretchers (transmission line section that can vary its electrical distance). In theory, a one-quarter-wavelength stub in conjunction with a half-wavelength stretcher can match any impedance to the generator\sidecite{england1989}. However, the actuators of these systems rely on motors (capacitors) or hydraulic systems (tuning stub, line stretchers), so their response time is of the order to 100 milliseconds or higher, which is much slower than most uncontrolled plasma variations. For this reason, fusion RF antenna are now designed to be intrinsically relatively load-tolerant, using specific feeding line or antenna design. 
 
 
 % #####################################################
@@ -319,9 +319,9 @@ As seen in the previous section, impedance match and maximum power transfer are 
 	\Gamma_{\mathrm{pw}} = \frac{Z_0 - Z_L^*}{Z_0 + Z_L}
 \end{equation}
 
-This definition introduces "wave" variables that can no longer be interpreted as incoming and outgoing waves from ports. However, they can be interpreted in terms of power flow at a junction, which explains its wide adoption by the RF community. Most RF circuit solvers (such as Keysight ADS, ANSYS Circuit) use the \textit{power-waves} definition introduced. \marginnote[*-4]{Because of its wide adoption, \href{http://scikit-rf.org/}{scikit-rf} also uses the power-waves definition by default (mostly in order to replicate results from commercial solvers) but allows the use of pseudo-wave definition as well.} 
+This definition introduces "wave" variables that can no longer be interpreted as incoming and outgoing waves from ports. However, they can be interpreted in terms of power flow at a junction, which explains its wide adoption by the RF community. Most RF circuit solvers (such as Keysight ADS, ANSYS Circuit) use the \textit{power-waves} definition. \marginnote[*-4]{Because of its wide adoption, \href{http://scikit-rf.org/}{scikit-rf} also uses the power-waves definition by default (mostly in order to replicate results from commercial solvers) but allows the use of pseudo-wave definition as well.} 
 
-However, the power-wave definition has some caveats one must be aware of. In particular, power-waves definition may not give physical results in case of complex characteristic impedance\footnote{A simple illustration of the problem is to consider a transmission line of complex characteristic impedance $Z_0$ loaded with a an impedance $Z_L=Z_0^*$. Voltage and current waves as defined at the beginning of this section will lead to a non zero reflection coefficient $\Gamma_L$ while power-waves-based tools will give a zero reflection coefficient $\Gamma_\mathrm{pw,L}$\cite{amakawa2016}.} and are not always continuous at the interface between circuits unless reference impedance is real, so cannot be cascaded in all cases{marks1992, williams2013}. In the real world, all transmission lines are lossy (at least to a small degree) and this contradiction has been identified shortly after Kurokawa seminal paper\cite{amakawa2016} but somewhat forgotten after. For this reason, \citeauthyear{marks1992} introduced the \textit{pseudo-waves} definition of S-parameters\footnote{where a phase factor used in \cite{marks1992} has been omitted here for simplification.}:\marginnote{Again, the pseudo-wave definition equals the travelling-wave definition when $\Zref$ is real-valued. This paragraph aims only to highlight the fact that great care should be taken when dealing with S-parameters with lossy transmission lines with electromagnetic solvers, in particular closed-source ones.}
+However, the power-wave definition has some caveats one must be aware of. In particular, power-waves definition may not give physical results in case of complex characteristic impedance\footnote{A simple illustration of the problem is to consider a transmission line of complex characteristic impedance $Z_0$ loaded with an impedance $Z_L=Z_0^*$. Voltage and current waves as defined at the beginning of this section will lead to a non zero reflection coefficient $\Gamma_L$ while power-waves-based tools will give a zero reflection coefficient $\Gamma_\mathrm{pw,L}$\cite{amakawa2016}.} and are not always continuous at the interface between circuits unless reference impedance is real, so cannot be cascaded in all cases \sidecite{marks1992, williams2013}. In the real world, all transmission lines are lossy (at least to a small degree) and this contradiction has been identified shortly after Kurokawa seminal paper\cite{amakawa2016} but somewhat forgotten after. For this reason, \citeauthyear{marks1992} introduced the \textit{pseudo-waves} definition of S-parameters\footnote{where a phase factor used in \cite{marks1992} has been omitted here for simplification.}:\marginnote{Again, the pseudo-wave definition equals the travelling-wave definition when $\Zref$ is real-valued. This paragraph aims only to highlight the fact that great care should be taken when dealing with S-parameters with lossy transmission lines with electromagnetic solvers, in particular closed-source ones.}
 \begin{subequations}
 	\begin{align}
 		a_i =& \frac{\sqrt{\Re(Z_{R,i})}}{|Z_{R,i}|} \Vfwd_i 
@@ -330,7 +330,7 @@ However, the power-wave definition has some caveats one must be aware of. In par
 = \frac{\sqrt{\Re(Z_{R,i})}}{|Z_{R,i}|} \frac{V_i - Z_{R,i} I_i}{2}		
 	\end{align}
 \end{subequations}
-where $Z_{R,i}$ is an arbitrary value which can be different from the characteristic impedance $Z_0$ of the physical transmission line at the $i$th port. $a$ and $b$ are not longer directly related to voltage and curent travelling wave and only when $Z_{R}$ equals to $Z_0$ do $a$ and $b$ correspond to actual travelling wave amplitude (normalized to unit of $\sqrt{\si{W}}$). The power $p$ transmitted by a pseudo-wave at the port interface is:
+where $Z_{R,i}$ is an arbitrary value which can be different from the characteristic impedance $Z_0$ of the physical transmission line at the $i$th port. $a$ and $b$ are not longer directly related to voltage and curent travelling wave and only when $Z_{R}$ equals to $Z_0$ do $a$ and $b$ correspond to actual travelling wave amplitude (normalized to unit of [$\sqrt{\si{W}}$]). The power $p$ transmitted by a pseudo-wave at the port interface is:
 \begin{equation}
 p = \frac{1}{2} \left(|a|^2 - |b|^2 - 2\Im(a^* b) \frac{\Im(\Zref)}{\Re(\Zref)} \right)
 \end{equation}
@@ -349,7 +349,7 @@ where the $\abf$ and $\bbf$ array are constituted of the $a_i$ and $b_i$ element
 \section{Coaxial Lines}\label{sec:coaxial_lines}
 % #####################################################
 \subsection{Coaxial Lines Main Properties}
-A coaxial line is made of two cylindrical conductors, the internal of radius $a$ and the external of radius $b$, encapsulated one inside the other as illustrated in Figure~\ref{fig:coaxial_line_geometry}. The space between both conductors is filled with a dielectric. In high power application, conductors are made of rigid metallic cylinder (aluminium or stainless steel) eventually copper or silver coated to reduce RF losses. The dielectric is simply (dry) air, pressurized nitrogen or vacuum to reduce dielectric breakdown. 
+A coaxial line is made of two cylindrical conductors, the internal of radius $a$ and the external of radius $b$, encapsulated one inside the other as illustrated in Figure~\ref{fig:coaxial_line_geometry}. The space between both conductors is filled with a dielectric. In high power application, conductors are made of rigid metallic cylinder (aluminium or stainless steel) eventually copper or silver-coated to reduce RF losses. The dielectric is simply (dry) air, pressurized nitrogen or vacuum to reduce dielectric breakdown. 
 
 % #####################################################
 \subsection{Electric and Magnetic Fields}
@@ -378,7 +378,7 @@ where $V=V_0 e^{\mp\gamma z}$ is the voltage between the conductors and $I=I_0 e
 \end{marginfigure}	
 
 % #####################################################
-\subsection{Characteristic Impedance}. 
+\subsection{Characteristic Impedance}
 The characteristic impedance $Z_0$ in $[\si{\Omega}]$ of a coaxial line is:
 \begin{equation}
 Z_0 = 
@@ -395,7 +395,7 @@ From Eq.(\ref{eq:coaxial_electric_field}), the maximum electric field is located
 \begin{equation}
 	V_{\mathrm{max,bd}} = a\ln\left(b/a\right) E_d
 \end{equation}
-where $E_d$ is the \textit{dielectric field strength} of the medium. For dry-air, this value is given as $3$~\si{MV/m} for dry air\cite[b§3.11]{pozar2012}.\marginnote{The field strength is vacuum is in theory much higher, however as detailed in Section~\ref{sec:Multipactor}, electrical breakdown in vacuum can occur because of other mechanisms.}. In a lossless coaxial line, the associated maximum power before breakdown $P_\mathrm{max,bd}$ is from Eq.(\ref{eq:power_loss_lossless_transmission_line})
+where $E_d$ is the \textit{dielectric field strength} of the medium. For dry-air, this value is given as $3$~\si{MV/m} \cite[b§3.11]{pozar2012}\marginnote{The field strength in vacuum is in theory much higher. However, as detailed in Chapter~\ref{chap:Multipactor}, electrical breakdown in vacuum can occur because of other mechanisms.}. In a lossless coaxial line, the associated maximum power before breakdown $P_\mathrm{max,bd}$ is from Eq.(\ref{eq:power_loss_lossless_transmission_line}):
 \begin{equation}
 	P_\mathrm{max,bd} =  \frac{V^2_{\mathrm{max,bd}} }{2 Z_0 \SWR}= \sqrt{\frac{\varepsilon_{r}}{\mu_r}} \frac{a^2 E_d^2}{120\,\SWR} \ln (b/a)
 \end{equation}
@@ -445,7 +445,7 @@ P_\ell (z)
 % #####################################################
 \section{Rectangular Waveguides}\label{sec:rectangular_waveguide}
 \subsection{Rectangular Waveguides Main Properties}
-Electromagnetic wave can also propagate in hollow metallic structures filled with dielectric. The structure dimensions must be designed to the wavelength to transport. Waveguides can support different kinds of modes, the most conventiannol being TE (Transvere Electric) and TM (Transverse Magnetic) modes. 
+Electromagnetic wave can also propagate in hollow metallic structures filled with dielectric. The structure dimensions must be designed for the wavelength to transport. 
 
 \begin{marginfigure}[0cm]
 	\includegraphics[width=1\linewidth]{figures/chap3/rectangular_waveguide}
@@ -458,12 +458,12 @@ A hollow rectangular waveguide of width $a$ and height $b$ is illustrated in Fig
 	\beta_{mn} = \sqrt{k^2_0 - k_{c,mn}^2 }
 	\label{eq:rectwg_wavenumber}
 \end{equation}
-with $k_0=\omega\sqrt{\mu\varepsilon}=\sqrt{\mu_r \varepsilon_{r}}\omega/c$ and where $k_{c,mn}$ is the \textit{cut-off wavenumber}:
+with $k_0=\omega\sqrt{\mu\varepsilon}=\sqrt{\mu_r \varepsilon_{r}}\omega/c$, where $k_{c,mn}$ is the \textit{cut-off wavenumber}:
 \marginnote{We recall here for convenience that the medium wavelength $\lambda$ is:
 	$$
 	\lambda = \frac{\lambda_0}{n} = \frac{v_\phi}{f}
 	$$
-	where $\lambda_0$ is the wavelength in vacuum, $v\phi$ is the phase velocity, $n=c/v_\phi=\sqrt{\mu_r \varepsilon_{r}}$ is the refractive index and $c=1/\sqrt{\mu_0 \varepsilon_{0}}$ the speed of light. We also define 
+	where $\lambda_0$ is the wavelength in vacuum, $v_\phi$ is the phase velocity, $n=c/v_\phi=\sqrt{\mu_r \varepsilon_{r}}$ is the refractive index and $c=1/\sqrt{\mu_0 \varepsilon_{0}}$ the speed of light. We also define 
 	$$
 	\xi_0=\sqrt{\frac{\mu_0}{\varepsilon_{0}}}=120\pi=377\,\si{\Omega}
 	$$ 
@@ -524,13 +524,13 @@ Z_{pmn} =
 \end{cases}
 \end{equation}
 
-The model eingenfunction for rectangular waveguides are\cite[§2.2]{marcuvitz1951},\cite[§8.1,§8.2]{Harrington2001},\cite[§5.4]{Collin1990},\cite[§3.3]{pozar2012},\cite[Appendix A]{Bers1981} for TE modes:
+The modal eingenfunctions for rectangular waveguides are\cite[§2.2]{marcuvitz1951},\cite[§8.1,§8.2]{Harrington2001},\cite[§5.4]{Collin1990},\cite[§3.3]{pozar2012},\cite[Appendix A]{Bers1981} for TE modes:
 \begin{eqnarray}
 \mathbf{e}_{mn}^{\TE}(y,z) & = & -\ebf_x \times \mathbf{h}_{mn}^{\TE} = \ebf_x \times \nabla_{t} \psi_{mn}\\
 \mathbf{h}_{mn}^{\TE}(y,z) & = &  \ebf_x \times \mathbf{e}_{mn}^{\TE} = -\nabla_{t} \psi_{mn}
 \label{eq:TEmodes_eingenfunctions}
 \end{eqnarray}
-and mode TM modes:
+and for mode TM modes:
 \begin{eqnarray}
 \mathbf{e}_{mn}^{\TM}(y,z) & = & -\nabla_{t}\phi_{mn}\\
 \mathbf{h}_{mn}^{\TM}(y,z) & = & \ebf_x \times\mathbf{e}_{mn}^{\TM}= -\ebf_x \times\nabla_{t}\phi_{mn}
@@ -618,7 +618,7 @@ where $P_\mathrm{i}$ (in [\si{W}]) is the forward power and $P_\mathrm{r}$ the r
 \end{subequations}	
 where we have used the "voltage" reflection coefficient $R$ defined by $R^2=P_\mathrm{r}/P_\mathrm{i}$. Using all the previous definitions, the electromagnetic field in Eqs.(\ref{eq:rectwg_EHfields_TE10}) can be directly related to forward and reflected powers, giving peak values comparable to full-wave calculations and for breakdown analysis. A simple benchmark of these relations is given on Fig.\ref{fig:rectwg_benchmark_fields}.
 
-The electric field for the $\TE_{10}$ mode is maximum at $x=a/2$ (in the middle of the waveguide). This peak electric field value for this mode is:
+The electric field for the $\TE_{10}$ mode is maximum at $y=a/2$ (in the middle of the waveguide). This peak electric field value for this mode is:
 \begin{equation}
 	\left| E_{y,\mathrm{max}} \right|
 	=
@@ -651,9 +651,9 @@ From symmetry, the currents on the top and bottom walls are identical, as are th
 \begin{equation}
 P_\ell (z)
 = 
-2\int_0^a  \Psi_a(x,z) \diff x 
+2\int_0^a  \Psi_a(y,z) \diff y 
 + 
-2\int_0^b  \Psi_b(z) \diff y 
+2\int_0^b  \Psi_b(z) \diff z 
 \end{equation}
 which reads:
 \begin{equation}
