--- a/tex/chap_multipactor.tex
+++ b/tex/chap_multipactor.tex
@@ -22,7 +22,7 @@ These parasitic phenomenon can limit the power transmitted from the RF sources t
 
 \subsection{Formation Mechanisms}
 
-Despite the enormous number of papers published on this topic, some uncertainty remains about breakdown overall processes. This uncertainty is due to the fact that few mechanisms are (or seem) to be involved \sidecite{insepov2011-1}. Moreover, they occur on very short time scales \sidecite[+0.5cm]{zhou2019}, during which experimental parameters vary over 12 orders of magnitude \cite{Timko2011}. As setup are often unique and results delicate to compare for an application to another, few dedicated experimental studies have been conducted to explore different  experimental parameters relevant to tokamak antennas \sidecite{bobkov2003, Graves2006a, becerra2007, dinca2009}.
+Despite the enormous number of papers published on this topic, some uncertainty remains about breakdown overall processes. This uncertainty is due to the fact that few mechanisms are (or seem) to be involved \sidecite{insepov2011-1}. Moreover, they occur on very short time scales \sidecite[+0.5cm]{zhou2019}, during which experimental parameters vary over 12 orders of magnitude \cite{Timko2011}. As setup are often unique and results delicate to compare from an application to another, few dedicated experimental studies have been conducted to explore different  experimental parameters relevant to tokamak antennas \sidecite{bobkov2003, Graves2006a, becerra2007, dinca2009}.
 
 It is know since some time that DC breakdown mechanism under ultra-high vacuum is related to local breakdown fields which mostly depend on the electrode materials \sidecite{alpert1964, descoeudres2009}. Recent experimental and modelling works performed for accelerators argue that arcing can be explained by the properties of surface cracks and \textit{unipolar arcs}\sidenote[][+1cm]{unipolar arcs (or cathodic arcs) are similar to vacuum arcs, only instead of striking between two solid electrodes they strike between one solid electrode and a plasma\cite[§9.8]{wesson2011}.} and explained from the following steps \sidecite{insepov2013}:
 \begin{enumerate}
@@ -42,9 +42,9 @@ It is generally admitted in the fusion community that \textit{field emission} is
 
 
 \subsection{Arc Detection}
-Breakdowns appearing in RF system can induce changes on the effective impedance which may detune the matching system and allows reflected power to return to the RF sources. Thus, reflection coefficient is the primary breakdown detection method in both ICRF and LHRF. However, if the breakdown is close to a voltage node, the VSWR or reflection coefficient’s phase may be almost unperturbed while increasing the apparent power coupling \sidecite{monakhov2007, goniche2014}. It is thus of great importance to detect these breakdowns as well as to switch-off sources fast enough to avoid damages. 
+Breakdowns appearing in RF system can induce changes on the effective impedance which may detune the matching system and allows reflected power to return to the RF sources. Thus, reflection coefficient is the primary breakdown detection method in both ICRF and LHRF. 
 
-However, some kind of arcs do not change the reflection coefficient and can nevertheless damage components. Such arcs may arise in location of low voltage nodes and/or on vacuum feed-through \sidecite{baity2005, dinca2011-1}. The formation mechanisms of such arcs are complex and certainly multifactorial (geometry, materials) and are attributed to multipactor (or a consequence of a multipactor-initated discharge) \sidecite{monakhov2007, kishek1998}. 
+However, if the breakdown is close to a (low) voltage node and/or on vacuum feed-through \sidecite[-1cm]{baity2005, dinca2011-1}, the VSWR or reflection coefficient’s phase may be almost unperturbed while increasing the apparent power coupling but can nevertheless damage components\sidecite{monakhov2007, goniche2014}. The formation mechanisms of such arcs are complex and certainly multifactorial (geometry, materials) and are attributed to multipactor (or a consequence of a multipactor-initated discharge) \sidecite[+1cm]{monakhov2007, kishek1998}. It is thus of great importance to detect these breakdowns as well as to switch-off sources fast enough to avoid damages. 
 
 Therefore, detection only based on reflection coefficient is not reliable enough to insure the safety of the system and additional detection techniques have been developed. Among these methods, we can list Sub-Harmonic Arc Detection (SHAD) \sidecite[-0.5cm]{dinca2011}, Scattering Matrix Arc Detection (SMAD) \sidecite{vrancken2009} or optical detection have been proposed or implemented in various systems, such as the WEST ICRH antenna, to complete reflection coefficient method \sidecite{dinca2009, bosia2011}. 
 
@@ -58,7 +58,7 @@ Multipactor is a process by which electron population increases from a resonant 
 	\item A synchronism of the electron motion between a single  or two electrodes with the RF electric field.
 \end{itemize}
 
-In high power RF devices under vacuum, this phenomenon is usually not desirable, since it can detune RF systems or ultimately lead to an avalanche effect and the development of a discharge which can damage RF components, even at pressures two order of magnitude below Paschen breakdown limit \sidecite[-1cm]{gill1948, kishek1998, graves2006}. As it concerns RF system in vacuum environment, it affects satellite payloads \sidecite{rozario1994, anzahormigo2014}, particle accelerators \sidecite[+0.7cm]{elkhaldi2019} and of course fusion experiments. When not detected quickly enough, local plasma can be initiated by multipacting electrons and finally to an arc \sidecite[-0.3cm]{hohn1997}. These arcs can lead to surface erosion \sidecite{goniche2012}, dielectric components metallization \sidecite[+0.5cm]{wang2015} or water/air leaks due to punctured components such as bellows or vacuum windows \sidecite[+1cm]{neuber1998, neuber2007}. 
+In high power RF devices under vacuum, this phenomenon is usually not desirable, since it can detune RF systems or ultimately lead to an avalanche effect and the development of a discharge which can damage RF components, even at pressures two order of magnitude below Paschen breakdown limit \sidecite[-1cm]{gill1948, kishek1998, graves2006}. As it concerns RF system in vacuum environment, it affects satellite payloads \sidecite{rozario1994, anzahormigo2014}, particle accelerators \sidecite[+0.3cm]{elkhaldi2019} and of course fusion experiments. When not detected quickly enough, local plasma can be initiated by multipacting electrons and finally to an arc \sidecite[-0.3cm]{hohn1997}. These arcs can lead to surface erosion \sidecite[+0.2cm]{goniche2012}, dielectric components metallization \sidecite[+0.5cm]{wang2015} or water/air leaks due to punctured components such as bellows or vacuum windows \sidecite[+1cm]{neuber1998, neuber2007}. 
 
 %The ICRF and LHRF antennas are  made of copper or silver-coated stainless-steels structures and are located in vacuum environments. The vacuum sealing with pressurized transmission lines is made with the help of ceramics such as alumina, aluminium nitride, beryllium oxide or diamond. 
 
@@ -74,7 +74,7 @@ Finally, dielectric are also subject to multipactor, which can be critical when 
 \subsection{Multipactor in coaxial geometries}\label{sec:multipactor_icrf}
 In coaxial geometries, multipactor-induced breakdown disappear when the power level is above few kilowatts \sidecite[-0.5cm]{woo1968, woo1970}, which is a typical signature of multipactor resonance as expected from theory  \sidecite{udiljak2007, semenov2007, becerra2007}. The later exact power level depends on the RF system such as $Q$-factor and transmission line dimensions and the materials used.  
 
-The Figure~\ref{fig:powerthresholdcoax} illustrates the multipactor power threshold versus the line impedance as calculated in a coaxial geometry with a fixed outer diameter at 50~MHz \sidecite{hillairet2017}. Such breakdowns are known to happen when the power builds up during the start-up phase of the generators. For this reason, the RF rise time is generally set as short as possible, in order to exceed this power window as fast as possible (“push-through”) and to be faster than the multipactor rise time \sidecite{graves2006, kishek1997, baity2005, mishra2010}. In practice, the maximum current drawn by the generator or the RF power feedback systems limits this rise time to no more than typically 50~µs/kW, which is generally sufficient to avoid multipactor during power ramp-up. 
+The Figure~\ref{fig:powerthresholdcoax} illustrates the multipactor power threshold versus the line impedance as calculated in a coaxial geometry with a fixed outer diameter at 50~MHz \sidecite{hillairet2017}. Such breakdowns are known to happen when the power builds up during the start-up phase of the generators. For this reason, the RF rise time is generally set as short as possible, in order to exceed this power window as fast as possible (“push-through”) and to be faster than the multipactor rise time \sidecite{graves2006, kishek1997, baity2005, mishra2010}. In practice, the maximum current drawn by the generator or the RF power feedback systems limits this rise time to typically 50~µs/kW, which is generally sufficient to avoid multipactor during power ramp-up. 
 
 \begin{figure}[h]
 	\centering
@@ -99,7 +99,7 @@ We have seen that in coaxial lines, multipactor appear above a certain lower ele
 
 Various strategies have been tested to improve power limits in LHRF grill antennas. Surface treatment to decrease electron secondary emission has been tested in various experiments \sidecite[+0.5cm]{timberlake1982}. However, because of further surface changes appearing during component's life, such as chemical reactions with present species or surface erosion/deposition. Hence, such solution might be inherently less reliable on the long-term. For example, carbon layer had been deposited on JET prototype L0 launcher but was gave up in later prototypes due to its tendency to flake-off \sidecite{dobbing1997, ekedahl1998}.
 
-Changing the antenna material itself had also been investigated. Because of its low secondary emission yield, titanium has been used on JFT-2, Versator II, WEGA and Petula-B \sidecite{england1989}. However, after an initial period of successful operation, titanium surface is rapidly altered, increasing its secondary emission yield. On the Alcator C-Mod tokamak, chemical reactions between deuterium and a titanium grill antenna has been observed, which created a brittle titanium deuteride compound. The antenna disintegrated into titanium deuteride dust and the LH launcher was finally removed from the tokamak\cite{wallace2010}. 
+Changing the antenna material itself had also been investigated. Because of its low secondary emission yield, titanium has been used on JFT-2, Versator II, WEGA and Petula-B \sidecite{england1989}. However, after an initial period of successful operation, titanium surface is rapidly altered, increasing its secondary emission yield. On the Alcator C-Mod tokamak, chemical reactions between deuterium and a titanium grill antenna has been observed, which created a brittle titanium deuteride compound. The antenna disintegrated into titanium deuteride dust and the LH launcher was finally removed from the tokamak\sidecite{wallace2010}. 
 
 Modification of the waveguide shape has also been proposed. From the experience acquired on vacuum tubes, it has been suggested that making each of the LH grill dividing septa thicker in the middle than at the edge, in order to introduce a slight lateral component of the electric field which in returns modify electron trajectories, might lead to multipactor suppression \sidecite{vaughan1982}.
 
@@ -121,7 +121,7 @@ A peculiarity of LHRF antenna with respect to satellite payloads is that they us
 	\caption{Typical geometry of a LHRF antenna thin rectangular waveguide close to the plasma.}
 	\label{fig:rectwglhgeometry}
 \end{marginfigure}
-Near the front face of the antenna, the tokamak strong magnetic DC magnetic field (few Teslas) is mostly parallel to the RF electric field in the antenna’s waveguides (Figure~\ref{fig:rectwglhgeometry}), with a strong negative gradient (1 to 2 T/m) along the waveguide longitudinal direction. Multipactor simulations showed a ~7\% reduction of the multipactor electric field threshold with respect to no magnetic field case for narrow waveguides (height<15~mm), as illustrated in Figure~\ref{fig:rectwglhgeometry}. Moreover, strong resonance correlated with the increase of the multipactor order is numerically observed when the total magnetic field (in norm) is such that the electron cyclotron frequency equals the wave frequency. In this case, the multipactor threshold is decreased more strongly for larger waveguides (-60\%) than for narrower ones (-20\%). Such case can lead to ease the breakdown occurrence, a situation which has been experimentally observed on smaller machines for which this range of magnetic field was met at the location of the grill antennas \sidecite[+3cm]{knowlton1982}. Such limitation is generally not observed experimentally on larger machine, due to the fact that the resonance layer occur in much wider waveguides. 
+Near the front face of the antenna, the tokamak strong magnetic DC magnetic field (few Teslas) is mostly parallel to the RF electric field in the antenna’s waveguides (Figure~\ref{fig:rectwglhgeometry}), with a strong negative gradient (1 to 2 T/m) along the waveguide longitudinal direction. Multipactor simulations showed a ~7\% reduction of the multipactor electric field threshold with respect to no magnetic field case for narrow waveguides (height<15~mm), as illustrated in Figure~\ref{fig:ethvsbyc3-c4}. Moreover, strong resonance correlated with the increase of the multipactor order is numerically observed when the total magnetic field (in norm) is such that the electron cyclotron frequency equals the wave frequency. In this case, the multipactor threshold is decreased more strongly for larger waveguides (-60\%) than for narrower ones (-20\%). Such case can lead to ease the breakdown occurrence, a situation which has been experimentally observed on smaller machines for which this range of magnetic field was met at the location of the grill antennas \sidecite[+3cm]{knowlton1982}. Such limitation is generally not observed experimentally on larger machine, due to the fact that the resonance layer occur in much wider waveguides. 
 
 When a magnetic field is directed along the waveguide’s large side direction, i.e. in the poloidal direction ($B_y$), the calculated multipactor power threshold can increase or decrease with respect to the threshold without DC magnetic field. However, in the typical range of radial magnitude observed in tokamak ($B_x$ ~0.1 to 0.3~T, no multipactor occurs. The addition of this $B_y$ field to a $B_0$ component has no effect on the threshold, unless $B_y ~ B_0$ where it is enhanced. 
 
@@ -156,7 +156,7 @@ TEEY is the total of the SEY and the BSEY, i.e. $\sigma=\eta+\delta$. These valu
 	\label{fig:teeycuexample}
 \end{figure}
 
-It is known from long that the triggering of multipactor depends mainly on the first cross-over energy  $E_{c1}$ and eventually on the maximum value of the TEEY curve ($\sigma_{\max}$) \sidecite{kishek1998}. However, as by shown in \citeauthyear{fil2016}, the magnitude of the calculated threshold also heavily depends on the shape of this curve, notably between $E_{c1}$ and $\sigma_{\max}$. Using secondary emission data for silver collected in the literature and experimental multipactor results, Nicolas Fils has shown during his PhD that in order for multipactor simulations to get results close experimental ones, the TEEY model curves need to be accurate in particular between $E_{c1}$ and $E_{\max}$. Hence, for multipactor simulations to be predictive, the TEEY properties of a RF device materials should be well known and representative of the operating conditions such as temperature and surface state. As the later evolves in time due to a combination of multiple factors such as impurity contamination, RF conditioning, breakdowns, prediction of the absolute multipactor threshold is possible but challenging for tokamak RF antennas.
+It is known from long that the triggering of multipactor depends mainly on the first cross-over energy  $E_{c1}$ and eventually on the maximum value of the TEEY curve ($\sigma_{\max}$) \sidecite{kishek1998}. However, as by shown in \citeauthyear{fil2016}, the magnitude of the calculated threshold also heavily depends on the shape of this curve, notably between $E_{c1}$ and $\sigma_{\max}$. Using secondary emission data for silver collected in the literature and experimental multipactor results, Nicolas Fils has shown during his PhD that in order for multipactor simulations to get results close to experimental ones, the TEEY model curves need to be accurate in particular between $E_{c1}$ and $E_{\max}$. Hence, for multipactor simulations to be predictive, the TEEY properties of a RF device materials should be well known and representative of the operating conditions such as temperature and surface state. As the later evolves in time due to a combination of multiple factors such as impurity contamination, RF conditioning, breakdowns, prediction of the absolute multipactor threshold is possible but challenging for tokamak RF antennas.
 
 % ###########################################################
 % ###########################################################
